--- a/style.css
+++ b/style.css
@@ -5,17 +5,27 @@ html {
 body {
     margin: 0;
     min-height: 100vh;
-}
-
-.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-align: center;
 }
 
-.image-div {
-    width: 500px;
+.container {
+    width: auto;
+    max-width: 900px;
     display: block;
+    text-align: center;
+    /*justify-content: center;*/
+}
+
+.image-div {
+    max-width: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
 }
 
 .image-div img {
-    width: 90%;
+    width: 100%;
 }
