--- a/style.css
+++ b/style.css
@@ -8,22 +8,19 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
 .container {
     width: auto;
-    max-width: 900px;
-    display: block;
+    max-width: 800px;
     text-align: center;
-    /*justify-content: center;*/
 }
 
 .image-div {
-    max-width: 500px;
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
+    width: 60%;
+    height: auto;
 }
 
 .image-div img {
