--- a/aaa.css
+++ b/aaa.css
@@ -9,6 +9,7 @@ body {
     /* font-size: 20px;
     font-weight: bolder; */
     font: bolder 20px 'Courier New', Courier, monospace;
+    line-height: 2em;
 }
 
 .container {
@@ -20,4 +21,13 @@ body {
     color: #fff;
     background-color: teal;
     padding: 20px;
+    border: 5px lightcyan dotted;
+}
+
+.box1 h1 {
+    color: rgba(2, 255, 255, 0.8);
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: -0.18em;
+    word-spacing: 0.5em;
 }
