--- a/style.css
+++ b/style.css
@@ -19,10 +19,10 @@ body {
 }
 
 .image-div {
-    width: 60%;
     height: auto;
 }
 
 .image-div img {
-    width: 100%;
+    padding: 5px;
+    width: 80%;
 }
