--- a/aaa.css
+++ b/aaa.css
@@ -18,10 +18,23 @@ body {
 }
 
 .box1 {
+    min-height: 80vh;
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
     color: #fff;
-    background-color: teal;
+    background-color: darkcyan;
     padding: 20px;
-    border: 5px lightcyan dotted;
+    
+    border-top: 6px lightcyan dotted;
+    border-right: 6px lightsalmon solid;
+    border-bottom: 8px lightgreen dashed;
+    border-left: 6px yellowgreen ridge;
+
+    margin-top: 7vh;
 }
 
 .box1 h1 {
